tests/errors/semantic/non_blocking/is.py
# pylint: disable=missing-function-docstring, missing-module-docstring/
ad = 1.

# this statement will be ignored at the codegen
x = ad is None
